feat: customer data removal
